--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app">
         <ul>
-            <li v-for="email in emailList">{{randomEmail}}</li>
+            <li v-for="email in emailList">{{email}}</li>
         </ul>
     </div>
 
